basic functionality no bl

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,11 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BankingApp-3544ABEF-41A2-47DB-B51D-2F29371C1EAC;Trusted_Connection=True;MultipleActiveResultSets=true",
     "BankingContext": "data source=.\\SQLEXPRESS;initial catalog=BankingDb;integrated security=True;MultipleActiveResultSets=True;"
   },
+  "dependencies": {
+    "Microsoft.Extensions.Caching.Memory": "1.0.0",
+    "Microsoft.AspNetCore.Session": "1.0.0"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
